Index.html in class work

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
     <h2>Your Name</h2>
     <img src="http://lorempixel.com/200/200/"/>    
-    <p>Write a short paragraph or two about yourself, or use placeholder text from <u>www.lipsum.com</u></p>
+    <div>Write a short paragraph or two about yourself, or use placeholder text from <a href= "https://www.lipsum.com">www.lipsum.com</a></div>
     <br>
     <h2>Contact Info</h2>
     <br>
     <ul>
-        <li>Email: <u>somplace@gmail.com</u></li>
-        <li>GitHub: <u>SampleName</u></li>
-        <li>Portfolio: <u>comming soon</u></li>
+        <li><strong>Email: </strong> <a href= "mailto:somplace@gmail.com">somplace@gmail.com</a></li>
+        <li><Strong>GitHub: </Strong> <u>SampleName</u></li>
+        <li><Strong>Portfolio: </Strong> <u>comming soon</u></li>
     </ul>
 
 </Body>
